2009-06-03 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.0-1 :
	3.1.0.6 rebuild against new icu, rc7 = final

2009-05-29 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.0.6-1 :
        new upstream release = go-oo 3.1.0 rc7

2009-05-22 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.0.4-1 :
        new upstream release = go-oo 3.1.0 rc5

2009-05-22 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.0.3-1 :
        new upstream release = go-oo 3.1.0 rc4
	*cancelled*

2009-05-19 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.0.2-1 :
	new upstream release = go-oo 3.1.0 rc3

2009-05-16 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.0.1-1 :
	new upstream release = go-oo 3.1.0 rc2

2009-05-11 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.0.0-1 :
	new upstream release = go-oo 3.1.0 rc1
	add NotDebian, CairoFonts, Shrink, Lockdown, Gcc44
	 sections to ArchLinux patches, not yet upstream

2009-05-02 Andreas Radke <andyrtr at archlinux.org>

        * 3.0.99.7-2 :
	build without stlport on x86_64 and with on i686
	to fix extensions (e.g. SunPDFImport)
	try move mono and gstreamer to optdepends

2009-04-25 Andreas Radke <andyrtr at archlinux.org>

        * 3.0.99.7-1 :
	new upstream release, OOo 310_m11=3.1.0rc2
	fix project url
	rediff the ArchLinux.patch - will send it upstream now

2009-04-25 Andreas Radke <andyrtr at archlinux.org>

        * 3.0.99.6-1 :
	new upstream pre-release
	manually install all built dicts+extension

2009-04-04 Andreas Radke <andyrtr at archlinux.org>

        * 3.0.99.4-1 :
	initial ArchLinux pkg
	based on the vanilla OOo-base-beta pkg
	known issue: Xfce menu does not show icons
	and dictionaries are not present