@@ -5,7 +5,7 @@
  rpl2-64: rPathCommon
  # ArchLinux
 -ArchLinux: LinuxCommon
-+ArchLinux: LinuxCommon, NotDebian, CairoFonts, Shrink, Lockdown, Gcc44
++ArchLinux: LinuxCommon, NotDebian, CairoFonts, Shrink, Lockdown, OOXMLExport, Gcc44
  # Win32
  Win32 : Win32Common
  # translate.org.za
