@@ -2,14 +2,14 @@
 # Maintainer: AndyRTR <andyrtr@archlinux.org>
 
 pkgname=go-openoffice
-pkgver=3.1.0
-_GOver=3.1.0.6
+pkgver=3.1.0.98.1
+_GOver=3.1.0.98.1
 pkgrel=1
 pkgdesc="OpenOffice.org - go-oo.org enhanced version of SUN's office suite"
 arch=('i686' 'x86_64')
 _go_tree="OOO310"
 _dir=DEV300
-_ootag=ooo310-m11 # = OOo 3.1.0 RC2 = final
+_ootag=ooo310-m13 # m11 = OOo 3.1.0 RC2 = final
 license=('LGPL3')
 url="http://go-oo.org/"
 install=${pkgname}.install
@@ -23,11 +23,12 @@ optdepends=('java-runtime:	adds java support'
 	    'poppler:		for the pdfimport extension'
 	    'mesa:		for the OGLTrans extension'
 	    'mono:		allows UNO automation with Mono'
-	    'gstreamer0.10-base:	+ some gstr-plugins to support multimedia content, e.g. in impress')
+	    'gstreamer0.10-base:	+ some gstr-plugins to support multimedia content, e.g. in impress'
+            'kdelibs:		for kde integration')
 makedepends=('automake' 'autoconf' 'wget' 'bison' 'findutils' 'flex' 'gawk' 'gcc-libs' 'libart-lgpl'
 	'pam' 'sane' 'perl-archive-zip' 'pkgconfig' 'unzip' "xulrunner>=1.9.0.10" 'apache-ant' 'cairo' 
 	'gperf' 'libcups' 'pstoedit' 'gconf' "openjdk6>=1.4" 'unixodbc' 'mesa>=7.4' 'poppler>=0.10.5'
-	'gstreamer0.10-base>=0.10.22'  'mono>=2.4') # 'boost' # 'libjpeg' 
+	'gstreamer0.10-base>=0.10.22'  'mono>=2.4' 'kdelibs>=4.2.4-2') # 'boost' # 'libjpeg' 
 provides=('openoffice-base')
 conflicts=('openoffice-base')
 _mirror="http://download.go-oo.org/"
@@ -43,44 +44,42 @@ source=(${_mirror}/${_go_tree}/ooo-build-${_GOver}.tar.gz
 	http://download.go-oo.org//DEV300/scsolver.2008-10-30.tar.bz2
 	http://download.go-oo.org//libwpd/libwpd-0.8.14.tar.gz
 	http://download.go-oo.org//SRC680/libwps-0.1.2.tar.gz
-	http://download.go-oo.org//SRC680/libwpg-0.1.3.tar.gz
-	ooo_getline.diff)
+	http://download.go-oo.org//SRC680/libwpg-0.1.3.tar.gz)
 #options=('!distcc' '!ccache' '!makeflags')
 noextract=(ooo-cli-prebuilt-3.1.tar.bz2 cairo-1.4.10.tar.gz mdbtools-0.6pre1.tar.gz
 	${_ootag}-{artwork,base,bootstrap,calc,components,extras,filters,help,impress,libs-gui,libs-core,libs-extern,postprocess,sdk,testing,ure,writer,libs-extern-sys,extensions}.tar.bz2
 	extras-3.tar.bz2 biblio.tar.bz2 unowinreg.dll scsolver.2008-10-30.tar.bz2 libwpd-0.8.14.tar.gz libwps-0.1.2.tar.gz libwpg-0.1.3.tar.gz)
-md5sums=('cdeb35a094e9ea0d9b746f3612f0d30b'
-         '83b5411a465797b3d8573ddacf7c7217'
+md5sums=('85781a1b76cd70e6b78608fe09581e29'
+         'a1ff3d64d0ca95c62a15c07e7f19f193'
          'b5b895b338e81191a6abacc644e3f705'
          '5598a5e500ad922e37b159dee72fc993'
          '246e8f38b2a1af1bcff60ee0da59300b'
-         '287978048c08659b39810de992d4c26a'
-         '6c32c4f173d1207481a499ab1d6d5d47'
-         '1bc62a4f88f193695541101bf8dc4b57'
-         '448b6d98a082617a6abc45307b376a4d'
-         '61d518e0b9a21d5e986824825dfe7fb6'
-         '4806489c7e53ae8c5144fb91352fe70e'
-         '9898ac373bd5688134e24372d0e16a95'
-         '7a23528b72ebee8788d5597ef7acbacd'
-         'a1e342e34e88c05bb2fb7234ae0a15a3'
-         '933efdcc45e957730431c3064dff4b39'
-         '8df6d9dc84c43c74db4016a031810213'
-         '12c46788771f174cc83f0e82a957ec1b'
-         '80f6d4a00e06c9df595e7b4a9ebf021a'
-         '9c963adff8b10bc0e8bcc97e2ca0a9f8'
-         'a768843afb06e3eef0d9c481be6c5db8'
-         'b6e79c5245666ef40cb006970e1a1ecf'
-         '7379d5ad47237193d26c7b55a3518dd7'
-         'a4b76722a9024595984c67bd4d9fecff'
-         '7df2da16025ecb6a466824ba6c388054'
+         '21089fe34654cf899706f60b2195dee5'
+         '1bc5d1563cf38287425e9f6a53003101'
+         '234681f8d4f41dc6b4752288acf01412'
+         '064f4a8c02323d86ee17fd4d8e53b21b'
+         '604b280541fa7a823f3dd06d16023556'
+         'd66fe9b2ccc99d7d00a76a21df7a0d18'
+         'af5d17b3475fc1e6fad19b3e9ad0c9f7'
+         'ab32d5b22bc0f89260a914cd26426185'
+         '138f29caa3802ccf26ac593b9cd2366d'
+         'b9b4c0e6aee7d69328637eeff3a039de'
+         'ea732cb0213002102a6051e139982380'
+         '00b3b1c7e90f3dbfa4b656213de4587f'
+         '60e2280c18a1ae0da9a1d7a72d88ff0a'
+         'beb3b785c85a160a752ff037c6d881eb'
+         '1077f5b38115990c714bfcae1eb819db'
+         '8dbc11a9b65b0e0254bf71fde0d9200f'
+         'f3000a15249aea104ae69e9bce9394a0'
+         'f8e7bb9a28f20ca2a9797a9046a1c2d8'
+         '65b4eecdadacdd13bbd7a3887b7bde39'
          '36f323a55ee83e9dc968e1b92569b62a'
          '1948e39a68f12bfa0b7eb309c14d940c'
          'e3a0b76dcd876f3d721ee7183729153d'
          '04181e5ef82973eb349d3122a19d2274'
          '64d66018897d759358f454010b6e75d2'
          '799fc3b835a79adce8c88a3fee0150c1'
-         'db556b750bf3eac8481a4cc5e29e5af1'
-         '7f9012680d0e329227445925710bafe6')
+         'db556b750bf3eac8481a4cc5e29e5af1')
 
 build() {
 	unset J2REDIR; unset J2SDKDIR; unset JAVA_HOME; unset CLASSPATH
@@ -114,8 +113,9 @@ build() {
 		--with-dict=ALL\
 		--with-binsuffix=no \
 		--disable-ldap \
-		--disable-kde\
 		--enable-cairo\
+		--disable-kde\
+		--enable-kde4\
 		--enable-lockdown\
 		--with-system-cairo\
 		--enable-crashdump\
@@ -127,10 +127,13 @@ build() {
 		--enable-pdfimport \
 		--enable-wiki-publisher \
 		--enable-ogltrans \
+		--with-ant-home="/usr/share/java/apache-ant"\
 		$EXTRAOPTS || return 1
 
+#		--disable-kde\
 #		--with-system-jpeg\ # broken, see http://qa.openoffice.org/issues/show_bug.cgi?id=74749
 #		--enable-report-builder \
+#		--with-additional-sections="OOXMLExport"
 
 	unset MAKEFLAGS
 	./download
