@@ -3,7 +3,7 @@ post_install() {
 gtk-update-icon-cache -f -q /usr/share/icons/hicolor
 update-desktop-database -q
 
-_GOver='3.1.0.6'
+_GOver='3.1.0.98.1'
 
 echo " see http://wiki.archlinux.org/index.php/Openoffice"
 echo " how to use extensions, e.g. for spell checking"
