@@ -1,3 +1,10 @@
+2009-06-24 Andreas Radke <andyrtr at archlinux.org>
+
+        * 3.1.0.98.1-1 :
+	new upstrem release = go-oo 3.1.1 alpha 1
+	enable OOXMLExport patch section needed by some other patches
+	enable experimental kde integration
+
 2009-06-03 Andreas Radke <andyrtr at archlinux.org>
 
         * 3.1.0-1 :
